@@ -12,18 +12,19 @@ import dev.stemcraft.api.service.region.RegionListener;
 import dev.stemcraft.api.service.world.WorldChangeSession;
 import dev.stemcraft.api.util.NamespaceId;
 import dev.stemcraft.api.util.PlayerUtil;
+import net.kyori.adventure.text.Component;
 import org.bukkit.GameMode;
 import org.bukkit.Location;
 import org.bukkit.Material;
 import org.bukkit.Sound;
 import org.bukkit.World;
+import org.bukkit.attribute.Attribute;
 import org.bukkit.block.Block;
 import org.bukkit.block.BlockFace;
 import org.bukkit.block.data.Bisected;
 import org.bukkit.block.data.type.Door;
 import org.bukkit.entity.Entity;
 import org.bukkit.entity.Item;
-import org.bukkit.entity.Monster;
 import org.bukkit.entity.Player;
 import org.bukkit.entity.Projectile;
 import org.bukkit.entity.Zombie;
@@ -586,7 +587,7 @@ public class NightfallArenaHandler implements MiniGameArenaHandler {
         respawnNightEliminatedPlayers(arena);
         resetTimeAnnouncements(arena);
 
-        if (arena.getPlayers().size() > 0) {
+        if (!arena.getPlayers().isEmpty()) {
             broadcastToOccupants(arena, nightfall.sunriseMessage(arena.get("currentNight", Integer.class, 0) + 1));
             playTimeAnnouncementSound(arena);
             playSoundToOccupants(arena, Sound.ENTITY_CHICKEN_AMBIENT, 0.8f, 0.85f);
@@ -689,7 +690,7 @@ public class NightfallArenaHandler implements MiniGameArenaHandler {
             int z = (int) Math.floor(player.getZ() + (Math.sin(angle) * radius));
 
             Block ground = world.getHighestBlockAt(x, z);
-            if (ground == null || !ground.getType().isSolid()) {
+            if (!ground.getType().isSolid()) {
                 continue;
             }
 
@@ -774,7 +775,7 @@ public class NightfallArenaHandler implements MiniGameArenaHandler {
         }
 
         Block highest = arena.world().getHighestBlockAt(dropBlock.getX(), dropBlock.getZ());
-        if (highest == null || highest.getY() != ground.getY()) {
+        if (highest.getY() != ground.getY()) {
             return false;
         }
 
@@ -915,7 +916,7 @@ public class NightfallArenaHandler implements MiniGameArenaHandler {
         dropItems(world, location, player.getInventory().getStorageContents());
         dropItems(world, location, player.getInventory().getArmorContents());
         ItemStack offHand = player.getInventory().getItemInOffHand();
-        if (offHand != null && !offHand.getType().isAir()) {
+        if (!offHand.getType().isAir()) {
             world.dropItemNaturally(location, offHand.clone());
         }
         clearInventory(player);
@@ -957,7 +958,7 @@ public class NightfallArenaHandler implements MiniGameArenaHandler {
         player.setExhaustion(0.0f);
         player.setLevel(0);
         player.setExp(0.0f);
-        player.setHealth(Math.min(player.getMaxHealth(), 20.0d));
+        player.setHealth(Math.min(player.getAttribute(Attribute.MAX_HEALTH).getValue(), 20.0d));
     }
 
     private void prepareDownedParticipant(@NotNull Player player) {
@@ -977,7 +978,7 @@ public class NightfallArenaHandler implements MiniGameArenaHandler {
         player.setExhaustion(0.0f);
         player.setLevel(0);
         player.setExp(0.0f);
-        player.setHealth(Math.min(player.getMaxHealth(), 20.0d));
+        player.setHealth(Math.min(player.getAttribute(Attribute.MAX_HEALTH).getValue(), 20.0d));
     }
 
     private void clearSpectatorTargetIfNeeded(@NotNull Player player) {
@@ -1171,9 +1172,7 @@ public class NightfallArenaHandler implements MiniGameArenaHandler {
             }
 
             zombie.setTarget(null);
-            if (zombie.getEquipment() != null) {
-                zombie.getEquipment().setHelmet(null);
-            }
+            zombie.getEquipment().setHelmet(null);
             zombie.setFireTicks(Math.max(zombie.getFireTicks(), 200));
         }
     }
@@ -1246,7 +1245,7 @@ public class NightfallArenaHandler implements MiniGameArenaHandler {
             int maxCountdown = Math.max(1, arena.getCountdownMax());
             return new PhaseCountdown(
                 "Sunset in " + formatCountdown(countdown),
-                Math.max(0.0d, Math.min(1.0d, (double) countdown / (double) maxCountdown))
+                    Math.clamp((double) countdown / (double) maxCountdown, 0.0d, 1.0d)
             );
         }
 
@@ -1265,7 +1264,7 @@ public class NightfallArenaHandler implements MiniGameArenaHandler {
 
         return new PhaseCountdown(
             (countdownToSunrise ? "Sunrise" : "Sunset") + " in " + formatCountdown(remainingSeconds),
-            totalTicks <= 0L ? 1.0d : Math.max(0.0d, Math.min(1.0d, (double) remainingTicks / (double) totalTicks))
+            totalTicks <= 0L ? 1.0d : Math.clamp((double) remainingTicks / (double) totalTicks, 0.0d, 1.0d)
         );
     }
 
@@ -1455,7 +1454,7 @@ public class NightfallArenaHandler implements MiniGameArenaHandler {
         player.setHealth(PlayerUtil.getMaxHealth(player));
     }
 
-    private @Nullable Location resolveDownedLocation(@NotNull MiniGameArena arena, @NotNull Location deathLocation) {
+    private @NotNull Location resolveDownedLocation(@NotNull MiniGameArena arena, @NotNull Location deathLocation) {
         if (!isOutsideArena(arena, deathLocation)) {
             return deathLocation.clone();
         }
@@ -1608,7 +1607,7 @@ public class NightfallArenaHandler implements MiniGameArenaHandler {
         }
 
         Block highest = arena.world().getHighestBlockAt(spawn.getBlockX(), spawn.getBlockZ());
-        return highest != null && highest.getY() == ground.getY();
+        return highest.getY() == ground.getY();
     }
 
     private boolean isTooCloseToPreparationSpawn(@NotNull Location candidate, @NotNull List<Location> occupied) {
@@ -1684,7 +1683,7 @@ public class NightfallArenaHandler implements MiniGameArenaHandler {
 
             Location destination = event.getTo();
             if (isOutsideArena(arena, destination)) {
-                if (isIntentionalExitTeleport(event.getCause()) && destination != null) {
+                if (isIntentionalExitTeleport(event.getCause())) {
                     event.setCancelled(true);
                     exitArenaViaTeleport(arena, event.getPlayer(), destination);
                     return;
@@ -1784,7 +1783,7 @@ public class NightfallArenaHandler implements MiniGameArenaHandler {
                 return;
             }
 
-            event.setDeathMessage(null);
+            event.deathMessage(Component.empty());
             event.getDrops().clear();
             event.setDroppedExp(0);
             event.setKeepInventory(true);
